objects/EFX__eFax_Line__c.object
<CustomObject>
    <fields>
        <fullName>EFX__Assigned_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>eFax_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EFX__Customer_Key__c</fullName>
        <description>The customer key assigned to a fax number in the efax system.</description>
        <inlineHelpText>The customer key assigned to a fax number in the efax system.</inlineHelpText>
        <label>Customer Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EFX__Fax_Number__c</fullName>
        <label>Fax Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>EFX__Is_Retrieve_Finished__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for denoting which efaxline gets finished retrieving all faxes</description>
        <label>Is Retrieve Finished</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EFX__Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EFX__Receive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field identifies if the assigned user can receive faxes from this line.</description>
        <inlineHelpText>This field identifies if the assigned user can receive faxes from this line.</inlineHelpText>
        <label>Receive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EFX__Recieved_Max_Completed_Timestamp__c</fullName>
        <label>Recieved Max Completed Timestamp</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EFX__Recieved_Min_Completed_Timestamp__c</fullName>
        <label>Recieved Min Completed Timestamp</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EFX__Send__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field identifies if the assigned user can send fax from this line.</description>
        <inlineHelpText>This field identifies if the assigned user can send fax from this line.</inlineHelpText>
        <label>Send</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EFX__Sent_Max_Completed_Timestamp__c</fullName>
        <label>Sent Max Completed Timestamp</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EFX__Sent_Min_Completed_Timestamp__c</fullName>
        <label>Sent Min Completed Timestamp</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EFX__User_Id__c</fullName>
        <description>The user id assigned to a fax number in the efax system.</description>
        <externalId>true</externalId>
        <inlineHelpText>The user id assigned to a fax number in the efax system.</inlineHelpText>
        <label>User Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>eFax Line</label>
    <listViews>
        <fullName>EFX__All_Efax_Lines</fullName>
        <columns>NAME</columns>
        <columns>EFX__Fax_Number__c</columns>
        <columns>EFX__Assigned_User__c</columns>
        <columns>EFX__Receive__c</columns>
        <columns>EFX__Send__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Efax Lines</label>
    </listViews>
    <nameField>
        <displayFormat>FXL-{0000}</displayFormat>
        <label>eFax Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>eFax Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>